--- a/2)_Computations_in_Numpy_Arrays_.ipynb
+++ b/2)_Computations_in_Numpy_Arrays_.ipynb
@@ -55,20 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'1.19.5'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 28
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "np.__version__\n",
@@ -80,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -89,7 +78,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1.9 s ± 29.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.04 s ± 31.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -103,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "12.5 ms ± 384 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "11.3 ms ± 73.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -209,7 +198,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 48,
+   "execution_count": 5,
    "outputs": [
     {
      "output_type": "stream",
@@ -295,11 +284,276 @@
    "metadata": {}
   },
   {
+   "source": [
+    "For large calculations, it is sometimes useful to be able to specify the array where the\n",
+    "result of the calculation will be stored. Rather than creating a temporary array, you\n",
+    "can use this to write computation results directly to the memory location where you’d like them to be. You can do this by using the optional <u>*out*</u> argument of any UFunc.\n",
+    "\n",
+    "Consider the following code:\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 1.,  2.,  4.,  8., 16.])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[ 1.  0.  2.  0.  4.  0.  8.  0. 16.  0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(5)\n",
+    "y = np.zeros(10) \n",
+    "np.power(2, x, out=y[::2])\n",
+    "print(y)"
+   ]
+  },
+  {
+   "source": [
+    "*If we had instead written `y[::2] = 2 ** x`, this would have resulted in the creation\n",
+    "of a temporary array to hold the results of 2 ** x, followed by a second operation\n",
+    "copying those values into the y array. This doesn’t make much of a difference for such\n",
+    "a small computation, but for very large arrays the memory savings from careful use of\n",
+    "the out argument can be significant.*"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Aggregates and their UFunc alternatives\n",
+    "\n",
+    "Aggregates are special methods in Numpy which can be used to reduce an array and compute simple mathematical insights out of an array.\n",
+    "\n",
+    "### UFunc Aggregates\n",
+    "\n",
+    "- <u>`.reduce()`</u>: This aggregate will apply the binary ufunc between the elements of the array chronologically.<br>\n",
+    "    e.g. `numpy.add.reduce(numpy.arange(1,6))` will yield 15\n",
+    "- <u>`.accumulate()`</u>: This aggregate will return an array with the result of every chronological operation done on an array using a ufunc with the `.reduce()` aggregate.<br>\n",
+    "    e.g. `numpy.add.accumulate(numpy.arange(1,6))` will yield `[ 1,  3,  6, 10, 15]`\n",
+    "- <u>`.outer()`</u>: This aggregate can compute the output of ufunc applied on all pairs of two different inputs.<br>\n",
+    "    e.g. <br>\n",
+    "    `x=np.arange(1,6)`<br>\n",
+    "    `numpy.multiply.outer(x,x)`\n",
+    "<br><br>\n",
+    "    The above will yield the following:\n",
+    "    <br><br>\n",
+    "\n",
+    "<pre>array([[ 1, 2, 3, 4, 5],\n",
+    "       [ 2, 4, 6, 8, 10],\n",
+    "       [ 3, 6, 9, 12, 15],\n",
+    "       [ 4, 8, 12, 16, 20],\n",
+    "       [ 5, 10,15, 20, 25]])</pre>\n",
+    "\n",
+    "    \n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3628800"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "# Factorial of 10 can be computed as below:\n",
+    "\n",
+    "np.multiply.reduce(np.arange(2,11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([      1,       2,       6,      24,     120,     720,    5040,\n",
+       "         40320,  362880, 3628800], dtype=int32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "# Factorial of till 10 can be computed as below:\n",
+    "\n",
+    "np.multiply.accumulate(np.arange(1,11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 1, 1, 1],\n",
+       "       [0, 0, 2, 2, 2],\n",
+       "       [0, 1, 0, 3, 3],\n",
+       "       [0, 0, 1, 0, 4],\n",
+       "       [0, 1, 2, 1, 0]], dtype=int32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "x=np.arange(1,6)\n",
+    "np.mod.outer(x,x)"
+   ]
+  },
+  {
+   "source": [
+    "### Numpy Aggregates\n",
+    "\n",
+    "These work the same way as UFunc aggregates but are dedicated methods for those and many more functions. Here are some of the numpy aggregates.\n",
+    "\n",
+    "<style type=\"text/css\">\n",
+    ".tg  {border-collapse:collapse;border-spacing:0;}\n",
+    ".tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+    "  overflow:hidden;padding:10px 5px;word-break:normal;}\n",
+    ".tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+    "  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}\n",
+    ".tg .tg-7btt{border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}\n",
+    ".tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}\n",
+    "</style>\n",
+    "<table class=\"tg\">\n",
+    "<thead>\n",
+    "  <tr>\n",
+    "    <th class=\"tg-7btt\">Function Name</th>\n",
+    "    <th class=\"tg-7btt\">Nan-safe Version</th>\n",
+    "    <th class=\"tg-7btt\">Description</th>\n",
+    "  </tr>\n",
+    "</thead>\n",
+    "<tbody>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.sum</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nansum</td>\n",
+    "    <td class=\"tg-0pky\">Compute sum of elements</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.prod</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanprod</td>\n",
+    "    <td class=\"tg-0pky\">Compute product of elements</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.mean</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanmean</td>\n",
+    "    <td class=\"tg-0pky\">Compute median of elements</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.std</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanstd</td>\n",
+    "    <td class=\"tg-0pky\">Compute standard deviation</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.var</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanvar</td>\n",
+    "    <td class=\"tg-0pky\">Compute variance</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.min</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanamin</td>\n",
+    "    <td class=\"tg-0pky\">Find minimum value</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.max</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanmax</td>\n",
+    "    <td class=\"tg-0pky\">Find maximum value</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.argmin</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanargmin</td>\n",
+    "    <td class=\"tg-0pky\">Find index of minimum value</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.argmax</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanargmax</td>\n",
+    "    <td class=\"tg-0pky\">Find index of maximum value</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.median</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanmedian</td>\n",
+    "    <td class=\"tg-0pky\">Compute median of elements</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.percentile</td>\n",
+    "    <td class=\"tg-0pky\">numpy.nanpercentile</td>\n",
+    "    <td class=\"tg-0pky\">Compute rank-based statistics of elements</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.any</td>\n",
+    "    <td class=\"tg-0pky\">N/A</td>\n",
+    "    <td class=\"tg-0pky\">Evaluate whether any elements are true</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td class=\"tg-0pky\">numpy.all</td>\n",
+    "    <td class=\"tg-0pky\">N/A</td>\n",
+    "    <td class=\"tg-0pky\">Evaluate whether all elements are true</td>\n",
+    "  </tr>\n",
+    "</tbody>\n",
+    "</table>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Array -> [22599 98886 56766 93589 27192 48210  7332  6957 86348 50460]\nMaximum integer -> 98886\nMinimum integer -> 6957\nStandard Deviation of the array -> 32564.114179415352\nMean of the array -> 49833.9\nMedian of the array -> 49335.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=np.random.randint(1,100000,10)\n",
+    "print(\"Array ->\",x)\n",
+    "print(\"Maximum integer ->\",np.max(x))\n",
+    "print(\"Minimum integer ->\",np.min(x))\n",
+    "print(\"Standard Deviation of the array ->\",np.std(x))\n",
+    "print(\"Mean of the array ->\",np.mean(x))\n",
+    "print(\"Median of the array ->\",np.median(x))"
+   ]
   }
  ]
 }
