Add Axis reference

--- a/1)_Basics_of_Numpy_Arrays_.ipynb
+++ b/1)_Basics_of_Numpy_Arrays_.ipynb
@@ -749,6 +749,28 @@
     "print(\"Splitting in 2 equal parts(VSplit) ->\")\n",
     "np.vsplit(a4,2)"
    ]
+  },
+  {
+   "source": [
+    "### Splitting and Concatenation reference for Axis\n",
+    "<pre>\n",
+    "1 2 3 4 | 4 3 2 1\n",
+    "1 2 3 4 | 4 3 2 1\n",
+    "1 2 3 4 | 4 3 2 1\n",
+    "1 2 3 4 | 4 3 2 1\n",
+    "--------|---------------> Horizontal Axis or Axis 1\n",
+    "1 2 3 4 | 4 3 2 1\n",
+    "1 2 3 4 | 4 3 2 1\n",
+    "1 2 3 4 | 4 3 2 1\n",
+    "1 2 3 4 | 4 3 2 1\n",
+    "        |\n",
+    "        |\n",
+    "        v\n",
+    "Vertical Axis or Axis 0   \n",
+    "</pre>     "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
