--- a/2)_Computations_in_Numpy_Arrays_.ipynb
+++ b/2)_Computations_in_Numpy_Arrays_.ipynb
@@ -55,9 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'1.19.5'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.__version__\n",
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -78,7 +89,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2.04 s ± 31.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.07 s ± 87.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -92,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "11.3 ms ± 73.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "11.3 ms ± 111 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -198,7 +209,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 5,
+   "execution_count": 42,
    "outputs": [
     {
      "output_type": "stream",
@@ -296,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +318,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 43
     },
     {
      "output_type": "stream",
@@ -369,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +391,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 44
     }
    ],
    "source": [
@@ -391,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +414,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 45
     }
    ],
    "source": [
@@ -414,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +440,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 46
     }
    ],
    "source": [
@@ -534,14 +545,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Array -> [22599 98886 56766 93589 27192 48210  7332  6957 86348 50460]\nMaximum integer -> 98886\nMinimum integer -> 6957\nStandard Deviation of the array -> 32564.114179415352\nMean of the array -> 49833.9\nMedian of the array -> 49335.0\n"
+      "Array -> [24087 63426 65628 95571  4979 58139  6362 31561 93853 74612]\nMaximum integer -> 95571\nMinimum integer -> 4979\nStandard Deviation of the array -> 31631.85672324658\nMean of the array -> 51821.8\nMedian of the array -> 60782.5\n"
      ]
     }
    ],
@@ -554,6 +565,203 @@
     "print(\"Mean of the array ->\",np.mean(x))\n",
     "print(\"Median of the array ->\",np.median(x))"
    ]
+  },
+  {
+   "source": [
+    "## Broadcasting\n",
+    "Broadcasting is simply a\n",
+    "set of rules for applying binary ufuncs (addition, subtraction, multiplication, etc.) on\n",
+    "arrays of different sizes."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([5, 6, 7])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "source": [
+    "# Element by element operation\n",
+    "\n",
+    "np.arange(3)+5 "
+   ]
+  },
+  {
+   "source": [
+    "Think of the `[0, 1, 2] + 5` operation as: \n",
+    "<pre>\n",
+    "[0, 1, 2]\n",
+    "    +       =  [5, 6, 7]\n",
+    "[5, 5, 5]\n",
+    "</pre>\n",
+    "\n",
+    "*Note: Remember this as a mental model for broadcasting , even though nothing of such kind happens in Numpy*"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Rules of Broadcasting\n",
+    "\n",
+    "- Rule 1: If the two arrays differ in their number of dimensions, the shape of the\n",
+    "one with fewer dimensions is padded with ones on its leading (left) side.\n",
+    "- Rule 2: If the shape of the two arrays does not match in any dimension, the array\n",
+    "with shape equal to 1 in that dimension is stretched to match the other shape.\n",
+    "- Rule 3: If in any dimension the sizes disagree and neither is equal to 1, an error is\n",
+    "raised.\n",
+    "<p align=\"center\">\n",
+    "<img src=\"Assets/broadcasting.jpg\",align=\"center\">\n",
+    "</p>\n",
+    "\n",
+    "<u>Examples:</u><br>\n",
+    "\n",
+    "- *Example 1:* <br>\n",
+    "**array1.shape -> (2,3)**<br>\n",
+    "**array2.shape -> (3,)**\n",
+    "<br>\n",
+    "So, according to rule 1, we add 1 to the left of array2.shape\n",
+    "<br>\n",
+    "**array1.shape -> (2,3)**<br>\n",
+    "**array2.shape -> (1,3)**\n",
+    "<br>\n",
+    "Now, according to rule 2, we  match the shape of any dimension that is 1.\n",
+    "<br>\n",
+    "**array1.shape -> (2,3)**<br>\n",
+    "**array2.shape -> (2,3)**\n",
+    "<br>\n",
+    "\n",
+    "Thus the resultant array will be of shape (2,3)\n",
+    "\n",
+    "- *Example 2:* <br>\n",
+    "**array1.shape -> (3,1)**<br>\n",
+    "**array2.shape -> (3,)**\n",
+    "<br>\n",
+    "So, according to rule 1, we add 1 to the left of array2.shape\n",
+    "<br>\n",
+    "**array1.shape -> (3,1)**<br>\n",
+    "**array2.shape -> (1,3)**\n",
+    "<br>\n",
+    "Now, according to rule 2, we  match the shape of any dimension that is 1, in this case , in both arrays.\n",
+    "<br>\n",
+    "**array1.shape -> (3,3)**<br>\n",
+    "**array2.shape -> (3,3)**\n",
+    "<br>\n",
+    "\n",
+    "Thus the resultant array will be of shape (3,3)\n",
+    "\n",
+    "- *Example 3:* <br>\n",
+    "**array1.shape -> (3,2)**<br>\n",
+    "**array2.shape -> (3,)**\n",
+    "<br>\n",
+    "So, according to rule 1, we add 1 to the left of array2.shape\n",
+    "<br>\n",
+    "**array1.shape -> (3,2)**<br>\n",
+    "**array2.shape -> (1,3)**\n",
+    "<br>\n",
+    "Now, according to rule 2, we  match the shape of any dimension that is 1, in this case , in both arrays.\n",
+    "<br>\n",
+    "**array1.shape -> (3,2)**<br>\n",
+    "**array2.shape -> (3,3)**\n",
+    "<br>\n",
+    "\n",
+    "<br>\n",
+    "Now, according to rule 3, The 2nd dimension in array1.shape disagrees with the corresponding dimension in array2.shape, therefor this will throw an error and array1 cannot be broadcasted."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1., 2., 3.],\n",
+       "       [1., 2., 3.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
+    }
+   ],
+   "source": [
+    "# Example 1\n",
+    "# Broadcasting an array with higher dimension, e.g. 2-D array + 1-D array\n",
+    "\n",
+    "np.ones((2,3))+np.arange(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [1, 2, 3],\n",
+       "       [2, 3, 4]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
+   "source": [
+    "# Example 2\n",
+    "# Broadcasting in cases when both arrays need broadcasting\n",
+    "\n",
+    "np.arange(3)[:,np.newaxis]+np.arange(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,2) (3,) ",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-55-12dcc469d70c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Broadcasting with unbroadcastable dimensions\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,2) (3,) "
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3\n",
+    "# Broadcasting with incompatible dimensions\n",
+    "\n",
+    "np.ones((3,2))+np.arange(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
