--- a/1) python_basics.ipynb
+++ b/1) python_basics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,7 @@
      "output_type": "stream",
      "text": [
       "0 Hello [1, 2, 3]\n",
+      "0Hello[1, 2, 3]\n",
       "0Hello[1, 2, 3]\n",
       "\\\\\n",
       "\\\\0\\\\Hello\n",
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +219,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sets\n",
+    "## Sets\n",
     "Sets are mutable collections of unique elements. They are defined by the curly braces {}."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
