add questions for oops in python

--- a/2) oops_in_python.ipynb
+++ b/2) oops_in_python.ipynb
@@ -59,6 +59,7 @@
     "            else:\n",
     "                return \"F\"\n",
     "            \n",
+    "    @staticmethod\n",
     "    def categorizeGrade(grade):\n",
     "        if grade==\"A\":\n",
     "            return \"Excellent\"\n",
@@ -79,6 +80,12 @@
     "        self.age=age\n",
     "    def setSalary(self, salary):\n",
     "        self.salary=salary\n",
+    "    \n",
+    "    def setGender(self, gender):\n",
+    "        if gender=='M':\n",
+    "            super().setGender('Male')\n",
+    "        elif gender=='F':\n",
+    "            super().setGender('Female')\n",
     "\n",
     "\n",
     "\n",
@@ -89,7 +96,7 @@
     "anurag.setGender('Male')\n",
     "anurag.setMarks(110)\n",
     "shweta=Teacher('Shweta',35)\n",
-    "shweta.setGender('Female')\n",
+    "shweta.setGender('F')\n",
     "shweta.setSalary(100000)\n",
     "print(satyam.gender)\n",
     "print(satyam.marks)\n",
@@ -117,7 +124,7 @@
     "    if(students[i].name==\"Satyam\"):\n",
     "        print(f\"Satyam did {DataTools.categorizeGrade(DataTools.getGrade(students[i].marks))} on his test.\")\n",
     "\n",
-    "\n",
+    "print(shweta.gender)\n",
     "\n",
     "\n"
    ]
@@ -141,6 +148,323 @@
     "    \n",
     "\n",
     "print(Globals.satyam)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 1\n",
+    "#### Class Creation\n",
+    "Use classes to manage data of a restaurant.\n",
+    "- Make a class MenuItem\n",
+    "    - with attributes:\n",
+    "        - item_name:`str`\n",
+    "        - item_price:`float`\n",
+    "        - item_quantity:`int`\n",
+    "    - with methods:\n",
+    "        - print_menu_item(with `item_name`,`item_price`,`item_quantity` all separated by `|`)\n",
+    "        - update_quantity\n",
+    "- Make another class Order\n",
+    "    - with attributes:\n",
+    "        - order_number:`int`\n",
+    "        - items:`List[MenuItem]`\n",
+    "        - customer_name:`str`\n",
+    "        - total_cost:`float`\n",
+    "    - with methods:\n",
+    "        - add_item\n",
+    "        - print_order(with `order_number` and `customer_name` in one line and `item_names` and `item_quantity` separated by `|`, followed by it in a new line, and finally the `total_cost`)\n",
+    "- Make another class Table\n",
+    "    - with attributes:\n",
+    "        - table_number:`int`\n",
+    "        - table_order:`Order`\n",
+    "    - with methods:\n",
+    "        - create_bill(with `order_number` and `customer_name` and `table_number`in one line and `item_names` and `item_quantity` separated by `|`, \n",
+    "          followed by it in a new line, and finally the `total_cost`)\n",
+    "        - add_order_item\n",
+    "- Make another class Restaurant\n",
+    "    - with attributes:\n",
+    "        - menu_items:`List[MenuItem]`\n",
+    "        - booked_tables:`Dict[table_number:int,Table]`\n",
+    "        - customer_orders:`List[Order]`\n",
+    "    - with methods:\n",
+    "        - add_item_to_menu\n",
+    "        - book_tables\n",
+    "        - print_menu\n",
+    "        - create_bill\n",
+    "        - take_customer_order.\n",
+    "\n",
+    "#### Object Creation\n",
+    "Make objects in the following order with dummy data:\n",
+    "- Create a Restaurant object.\n",
+    "- Create 5 MenuItems and store in Restaurant.\n",
+    "- Print the Menu.\n",
+    "- Book 2 Tables and take orders for each.\n",
+    "- Create bill for the first Table,vacant it and print the bill.\n",
+    "- Book another Table and take orders for it.\n",
+    "- Add 2 new MenuItems to the menu.\n",
+    "- Create bill for the second Table,print the bill and vacant it .\n",
+    "- Create bill for the third Table,print the bill and vacant it .\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** Menu Items **\n",
+      "Chicken Wings | 300.0\n",
+      "Chicken Tikka | 400.0\n",
+      "Beef Burger | 500.0\n",
+      "Veg Burger | 600.0\n",
+      "Fries | 700.0\n",
+      "Table Number: 1\n",
+      "Order ID: 2024-12-01 17:00:58.726184   Customer Name: Anurag Jha\n",
+      "Chicken Wings | 300.0 | 2\n",
+      "Chicken Tikka | 400.0 | 1\n",
+      "Total Cost: 1000.0\n",
+      "Table Number: 2\n",
+      "Order ID: 2024-12-01 17:00:58.726184   Customer Name: Satyam Singh Niranjan\n",
+      "Beef Burger | 500.0 | 2\n",
+      "Chicken Wings | 300.0 | 1\n",
+      "Total Cost: 1300.0\n",
+      "Table Number: 1\n",
+      "Order ID: 2024-12-01 17:00:58.726184   Customer Name: Tushar Kumar\n",
+      "Fries | 700.0 | 2\n",
+      "Veg Burger | 600.0 | 1\n",
+      "Total Cost: 2000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write Code for the first question here\n",
+    "from datetime import datetime\n",
+    "\n",
+    "class MenuItem:\n",
+    "    def __init__(self,item_name:str,item_price:float):\n",
+    "        self.item_name:str = item_name\n",
+    "        self.item_price:float = item_price\n",
+    "        self.item_quantity:int=0\n",
+    "\n",
+    "    def print_item(self):\n",
+    "        print(f\"{self.item_name} | {self.item_price}\")\n",
+    "\n",
+    "    def update_quantity(self,quantity:int):\n",
+    "        self.item_quantity = quantity\n",
+    "\n",
+    "class Order:\n",
+    "    def __init__(self,customer_name:str):\n",
+    "        self.order_id:str=str(datetime.now())\n",
+    "        self.customer_name:str=customer_name\n",
+    "        self.items:list[MenuItem]=[]\n",
+    "        self.total_cost:float=0\n",
+    "    \n",
+    "    def add_item(self,item:MenuItem,quantity:int):\n",
+    "        item.update_quantity(quantity)\n",
+    "        self.items.append(item)\n",
+    "        self.total_cost+=item.item_price*quantity\n",
+    "    \n",
+    "    def print_order(self):\n",
+    "        print(f\"Order ID: {self.order_id}   Customer Name: {self.customer_name}\")\n",
+    "        for item in self.items:\n",
+    "            print(f\"{item.item_name} | {item.item_price} | {item.item_quantity}\")\n",
+    "        print(f\"Total Cost: {self.total_cost}\")\n",
+    "\n",
+    "class Table:\n",
+    "    def __init__(self,table_number:int,order:Order):\n",
+    "        self.table_number:int=table_number\n",
+    "        self.order:Order=order\n",
+    "    \n",
+    "    def create_bill(self):\n",
+    "        print(f\"Table Number: {self.table_number}\")\n",
+    "        self.order.print_order()\n",
+    "\n",
+    "class Restaurant:\n",
+    "    def __init__(self):\n",
+    "        self.menu_items:dict[str,MenuItem]={}\n",
+    "        self.orders:list[Order]=[]\n",
+    "        self.booked_tables:dict[int,Table]={}\n",
+    "\n",
+    "    def add_item_to_menu(self,item_name:str,item_price:float):\n",
+    "        menu_item:MenuItem=MenuItem(item_name=item_name,item_price=item_price)\n",
+    "        self.menu_items[item_name]=menu_item\n",
+    "    \n",
+    "    def book_table(self,table_number:int,customer_name:str):\n",
+    "        if(table_number in self.booked_tables):\n",
+    "            print(\"Table already booked!\")\n",
+    "            return\n",
+    "        \n",
+    "        order:Order=Order(customer_name=customer_name)\n",
+    "        table:Table=Table(table_number=table_number,order=order)\n",
+    "        self.booked_tables[table_number]=table\n",
+    "    \n",
+    "    def print_menu(self):\n",
+    "        print(\"** Menu Items **\")\n",
+    "        for item in self.menu_items.values():\n",
+    "            item.print_item()\n",
+    "    \n",
+    "    def create_bill(self,table_number:int):\n",
+    "        self.booked_tables[table_number].create_bill()\n",
+    "        self.booked_tables.pop(table_number)\n",
+    "    \n",
+    "    def take_customer_order(self,table_number:int,item_name:str,quantity:int):\n",
+    "        table:Table=self.booked_tables[table_number]\n",
+    "        item_price:float=self.menu_items[item_name].item_price\n",
+    "        # Create a new MenuItem object to save from making any changes in the menu\n",
+    "        menuItem:MenuItem=MenuItem(item_name=item_name,item_price=item_price)\n",
+    "        menuItem.update_quantity(quantity)\n",
+    "        table.order.add_item(menuItem,quantity)\n",
+    "\n",
+    "\n",
+    "restaurant=Restaurant()\n",
+    "restaurant.add_item_to_menu(item_name=\"Chicken Wings\",item_price=300.0)\n",
+    "restaurant.add_item_to_menu(item_name=\"Chicken Tikka\",item_price=400.0)\n",
+    "restaurant.add_item_to_menu(item_name=\"Beef Burger\",item_price=500.0)\n",
+    "restaurant.add_item_to_menu(item_name=\"Veg Burger\",item_price=600.0)\n",
+    "restaurant.add_item_to_menu(item_name=\"Fries\",item_price=700.0)\n",
+    "restaurant.print_menu()\n",
+    "restaurant.book_table(table_number=1,customer_name=\"Anurag Jha\")\n",
+    "restaurant.book_table(table_number=2,customer_name=\"Satyam Singh Niranjan\")\n",
+    "restaurant.take_customer_order(table_number=1,item_name=\"Chicken Wings\",quantity=2)\n",
+    "restaurant.take_customer_order(table_number=1,item_name=\"Chicken Tikka\",quantity=1)\n",
+    "restaurant.take_customer_order(table_number=2,item_name=\"Beef Burger\",quantity=2)\n",
+    "restaurant.take_customer_order(table_number=2,item_name=\"Chicken Wings\",quantity=1)\n",
+    "restaurant.create_bill(table_number=1)\n",
+    "restaurant.book_table(table_number=1,customer_name=\"Tushar Kumar\")\n",
+    "restaurant.take_customer_order(table_number=1,item_name=\"Fries\",quantity=2)\n",
+    "restaurant.take_customer_order(table_number=1,item_name=\"Veg Burger\",quantity=1)\n",
+    "restaurant.add_item_to_menu(item_name=\"Chicken Burger\",item_price=300.0)\n",
+    "restaurant.add_item_to_menu(item_name=\"Diet Coke\",item_price=100.0)\n",
+    "restaurant.create_bill(table_number=2)\n",
+    "restaurant.create_bill(table_number=1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2\n",
+    "#### Class Creation\n",
+    "Use classes to manage data of a Bank\n",
+    "- Make a class Bank \n",
+    "    - with the following attributes:\n",
+    "        - name: `str`\n",
+    "        - total_balance:`float`\n",
+    "        - interest_rate:`float`\n",
+    "        - bank_accouts:`Dict[account_number:int,BankAccount]`\n",
+    "    - with the following methods:\n",
+    "        - deposit\n",
+    "        - withdraw(indicate low balance)\n",
+    "        - take_loan\n",
+    "- Make another class BankAccount\n",
+    "    - with the following attributes:\n",
+    "        - account_number:`int`\n",
+    "        - balance:`float`\n",
+    "        - owner_name:`str`\n",
+    "        - date_opened:`datetime`\n",
+    "    - with the following methods:\n",
+    "        - deposit\n",
+    "        - withdraw\n",
+    "        - check_account_balance\n",
+    "\n",
+    "#### Object Creation\n",
+    "Make objects in the following order with dummy data:\n",
+    "- Create a Bank object.\n",
+    "- Create 5 3 BankAccounts and add them to the Bank object.\n",
+    "- Make a deposit in the first BankAccount.\n",
+    "- Take a loan from the Bank.\n",
+    "- Make a deposit in the second BankAccount.\n",
+    "- Make a withdrawal from the third BankAccount.\n",
+    "- Check the balance of the third BankAccount.\n",
+    "- Make a withdrawal from the first BankAccount.\n",
+    "- Check the balance of the first BankAccount.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write code for second question here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions 3\n",
+    "\n",
+    "#### Class Creation\n",
+    "Use classes to manager the data of a automobile company\n",
+    "- Use an enum for VehicleType.\n",
+    "- Use an enum for Color\n",
+    "- Use an enum for FuelType\n",
+    "- Make a class Vehicle\n",
+    "    - with the following attributes:\n",
+    "        - type:`VehicleType`\n",
+    "        - onDisplay:`bool`\n",
+    "        - name:`str`\n",
+    "        - number_of_air_bags:`int`\n",
+    "        - number_of_seats:`int`\n",
+    "        - price:`float`\n",
+    "        - mileage:`float`\n",
+    "        - fuel_type:`FuelType`\n",
+    "        - color:`Color`\n",
+    "    - with the following methods:\n",
+    "        - update_price\n",
+    "        - set_on_display\n",
+    "- Make a class SUV\n",
+    "    - Inherit Vehicle\n",
+    "    - with the following attributes:\n",
+    "        - name:`str`\n",
+    "        - number_of_seats:7\n",
+    "        - number_of_air_bags:4\n",
+    "- Make a class Sedan\n",
+    "    - Inherit Vehicle\n",
+    "    - with the following attributes:\n",
+    "        - name:`str`\n",
+    "        - number_of_seats:5\n",
+    "        - number_of_air_bags:2\n",
+    "- Make a class Coupe\n",
+    "    - Inherit Vehicle\n",
+    "    - with the following attributes:\n",
+    "        - name:`str`\n",
+    "        - number_of_seats:2\n",
+    "        - number_of_air_bags:2\n",
+    "\n",
+    "#### Object Creation\n",
+    "Make Objects in the following order:\n",
+    "- Make 3 Sedan object\n",
+    "- Make a SUV object\n",
+    "- Make a Coupe object\n",
+    "- Set the coupe on display\n",
+    "- Update the coupe's price\n",
+    "- Set a sedan on display\n",
+    "- Set a SUV on display\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write code for the third question here"
    ]
   }
  ],
