fix question 2 in oops in python

--- a/2) oops_in_python.ipynb
+++ b/2) oops_in_python.ipynb
@@ -357,16 +357,6 @@
     "### Question 2\n",
     "#### Class Creation\n",
     "Use classes to manage data of a Bank\n",
-    "- Make a class Bank \n",
-    "    - with the following attributes:\n",
-    "        - name: `str`\n",
-    "        - total_balance:`float`\n",
-    "        - interest_rate:`float`\n",
-    "        - bank_accouts:`Dict[account_number:int,BankAccount]`\n",
-    "    - with the following methods:\n",
-    "        - deposit\n",
-    "        - withdraw(indicate low balance)\n",
-    "        - take_loan\n",
     "- Make another class BankAccount\n",
     "    - with the following attributes:\n",
     "        - account_number:`int`\n",
@@ -378,10 +368,22 @@
     "        - withdraw\n",
     "        - check_account_balance\n",
     "\n",
+    "- Make a class Bank \n",
+    "    - with the following attributes:\n",
+    "        - name: `str`\n",
+    "        - total_balance:`float`\n",
+    "        - interest_rate:`float`\n",
+    "        - bank_accounts:`Dict[account_number:int,BankAccount]`\n",
+    "    - with the following methods:\n",
+    "        - deposit\n",
+    "        - withdraw(indicate low balance)\n",
+    "        - take_loan\n",
+    "        - check_account_balance\n",
+    "\n",
     "#### Object Creation\n",
     "Make objects in the following order with dummy data:\n",
     "- Create a Bank object.\n",
-    "- Create 5 3 BankAccounts and add them to the Bank object.\n",
+    "- Create 3 BankAccounts and add them to the Bank object.\n",
     "- Make a deposit in the first BankAccount.\n",
     "- Take a loan from the Bank.\n",
     "- Make a deposit in the second BankAccount.\n",
